public enum Status {
    TODO,
    IN_PROGRESS,
    COMPLETED,
    ABANDONED
}
